add fixes to giphy-service, main and index.html
Co-authored-by: Max Brockbank <maxbrockbank1999@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
     <input id="giphy" type="text">
     <button class="btn-success" id="giphySearch">Search Gify</button>
     <br>
-    <button class="btn-success" id="giphyRandom">Search For Random Gify</button>
+    <!-- <button class="btn-success" id="giphyRandom">Search For Random Gify</button>
     <br>
     <button class="btn-success" id="giphyTrending">Search For What Gif Is Trending Today!</button>
     <br>
     <label for="translateGiphy">Enter weird stuff</label>
     <input id="translateGiphy" type="text">
     <button class="btn-success" id="giphyTranslate">Search For Some Weird Stuff</button>
-    <div class="showGif"></div>
+    <div class="showGif"></div> -->
   </div>
 </body>
 </html>
